force-app/main/default/objects/User/fields/Approver_for_Brand__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_Brand__c</fullName>
    <label>Approver for Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>