force-app/main/default/objects/User/fields/Approver_for_House_Code__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_House_Code__c</fullName>
    <label>Approver for House Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOE1</fullName>
            </value>
            <value>
                <fullName>DOE2</fullName>
            </value>
            <value>
                <fullName>DOE3</fullName>
            </value>
            <value>
                <fullName>DDH1</fullName>
            </value>
            <value>
                <fullName>DNIH</fullName>
            </value>
            <value>
                <fullName>LOE1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>