force-app/main/default/objects/User/fields/Approver_for_Region__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_Region__c</fullName>
    <label>Approver for Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>