force-app/main/default/objects/User/fields/Approver_for_Selling_Entity__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_Selling_Entity__c</fullName>
    <label>Approver for Selling Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selling_Entities</valueSetName>
    </valueSet>
</CustomField>