force-app/main/default/objects/User/fields/Approver_for_Sourcing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_Sourcing_Entity__c</fullName>
    <label>Approver for Sourcing Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sourcing_Entities</valueSetName>
    </valueSet>
</CustomField>