force-app/main/default/objects/User/fields/Approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level__c</fullName>
    <label>Approver Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>