force-app/main/default/objects/User/fields/Brand_Text__c.field-meta.xml
<CustomField>
    <fullName>Brand_Text__c</fullName>
    <formula>IF(INCLUDES( Brand__c , &quot;CDC&quot; ), &quot;CDC&quot;, NULL) + &quot;|&quot; +
IF(INCLUDES( Brand__c , &quot;Groth&quot; ), &quot;Groth&quot;, NULL) + &quot;|&quot; +
IF(INCLUDES( Brand__c , &quot;LaMOT&quot; ), &quot;LaMOT&quot;, NULL) + &quot;|&quot; +
IF(INCLUDES( Brand__c , &quot;LVA&quot; ), &quot;LVA&quot;, NULL) + &quot;|&quot;</formula>
    <label>Brand_Text</label>
    <type>Text</type>
</CustomField>