force-app/main/default/objects/User/fields/CDC_Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>CDC_Source_Entity__c</fullName>
    <label>CDC Source Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selling_Entity</valueSetName>
    </valueSet>
</CustomField>