force-app/main/default/objects/User/fields/Default_Commercial_Approver__c.field-meta.xml
<CustomField>
    <fullName>Default_Commercial_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Commercial Approver</label>
    <type>Checkbox</type>
</CustomField>