force-app/main/default/objects/User/fields/Point_Person__c.field-meta.xml
<CustomField>
    <fullName>Point_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Point Person</label>
    <type>Checkbox</type>
</CustomField>