force-app/main/default/objects/User/fields/RepCode__c.field-meta.xml
<CustomField>
    <fullName>RepCode__c</fullName>
    <formula>If(LEN(TEXT(Rep_Code__c))=1,TEXT(Rep_Code__c)&amp;&apos;XXX&apos;,(If(LEN(TEXT(Rep_Code__c))=2,TEXT(Rep_Code__c)&amp;&apos;XX&apos;,(If(LEN(TEXT(Rep_Code__c))=3,TEXT(Rep_Code__c)&amp;&apos;X&apos;,TEXT(Rep_Code__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepCode</label>
    <type>Text</type>
</CustomField>