force-app/main/default/objects/User/fields/Sourcing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Entity__c</fullName>
    <label>Sourcing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sourcing_Entities</valueSetName>
    </valueSet>
</CustomField>