force-app/main/default/objects/User/listViews/Active_Partner_Users.listView-meta.xml
<ListView>
    <fullName>Active_Partner_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CDC_Selling_Entity__c</columns>
    <columns>Groth_Selling_Entity__c</columns>
    <columns>LaMot_Selling_Entity__c</columns>
    <columns>LVA_Selling_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <label>Active Partner Users</label>
    <language>en_US</language>
</ListView>