force-app/main/default/objects/User/listViews/ActiveInternalUsers.listView-meta.xml
<ListView>
    <fullName>ActiveInternalUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Authorize_Code__c</columns>
    <columns>CDC_Selling_Entity__c</columns>
    <columns>CDC_Source_Entity__c</columns>
    <columns>Groth_Selling_Entity__c</columns>
    <columns>Groth_Source_Entity__c</columns>
    <columns>LaMot_Selling_Entity__c</columns>
    <columns>LaMot_Source_Entity__c</columns>
    <columns>LVA_Selling_Entity__c</columns>
    <columns>LVA_Source_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>community</value>
    </filters>
    <label>Active Internal Users</label>
    <language>en_US</language>
</ListView>