force-app/main/default/objects/User/listViews/CDCPC_Configurators.listView-meta.xml
<ListView>
    <fullName>CDCPC_Configurators</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>EAcevedo@GrothCorp.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>SCastillo@GrothCorp.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>SRebba@GrothCorp.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>SEberhard@GrothCorp.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>YWhispell@grothcorp.com.invalid</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>EAcevedo@GrothCorp.com.invalid</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>rbruneteau@contdisc.com.invalid</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>Escheier@contdisc.com.invalid</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>ZRegan@contdisc.com.invalid</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>dhartzler@lamot.com</value>
    </filters>
    <label>CDCPC Configurators</label>
    <language>en_US</language>
</ListView>